--- a/index.html
+++ b/index.html
@@ -40,20 +40,27 @@
 
     <!-- profile section -->
     <div class="black-border bg-secondary cover-photo"></div>
-    <div
-      class="d-flex black-border position-absolute"
-      style="top: 11rem; left: 3rem"
-    >
+
+    <div class="d-flex position-absolute" style="top: 11rem; left: 3rem">
       <div class="profile-photo"></div>
       <div class="d-flex flex-column">
         <h3 class="mx-2 mt-5">Facebook Profile Name</h3>
-        <div class="d-flex mt-4">
+        <div class="d-flex mt-4 mx-3">
           <div class="mx-2">Timeline</div>
           <div class="mx-2">About</div>
           <div class="mx-2">Friends</div>
           <div class="mx-2">Photo</div>
           <div class="mx-2">More</div>
         </div>
+      </div>
+    </div>
+
+    <div class="d-flex position-absolute" style="top: 13rem; right: 1rem">
+      <p class="mx-3 cover-buttons">Update Info</p>
+      <div class="d-flex">
+        <p class="cover-buttons">
+          Activity log <i class="bi bi-gear-fill mx-2"></i>
+        </p>
       </div>
     </div>
   </body>
