--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- navigation bar -->
-    <div class="black-border bg-secondary d-flex justify-content-between">
+    <div class="bg-secondary d-flex justify-content-between">
       <h4 class="mx-2">Facebook</h4>
 
       <div class="d-flex">
@@ -39,12 +39,12 @@
     </div>
 
     <!-- profile section -->
-    <div class="black-border bg-secondary cover-photo"></div>
+    <div class="bg-dark cover-photo"></div>
 
     <div class="d-flex position-absolute" style="top: 11rem; left: 3rem">
-      <div class="profile-photo"></div>
+      <div class="profile-photo bg-secondary"></div>
       <div class="d-flex flex-column">
-        <h3 class="mx-2 mt-5">Facebook Profile Name</h3>
+        <h3 class="mx-2 mt-5 text-light">Facebook Profile Name</h3>
         <div class="d-flex mt-4 mx-3">
           <div class="mx-2">Timeline</div>
           <div class="mx-2">About</div>
@@ -62,6 +62,12 @@
           Activity log <i class="bi bi-gear-fill mx-2"></i>
         </p>
       </div>
+    </div>
+
+    <!-- main content section -->
+    <div class="d-flex main-content mx-2">
+      <div class="black-border main-content-secondary mx-2"></div>
+      <div class="black-border main-content-secondary mx-2"></div>
     </div>
   </body>
 </html>
