--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="d-flex mt-4 mx-3">
           <div class="mx-2">Timeline</div>
           <div class="mx-2">About</div>
-          <div class="mx-2">Friends</div>
+          <div class="mx-2">image-box</div>
           <div class="mx-2">Photo</div>
           <div class="mx-2">More</div>
         </div>
@@ -66,8 +66,77 @@
 
     <!-- main content section -->
     <div class="d-flex main-content mx-2">
-      <div class="black-border main-content-secondary mx-2"></div>
-      <div class="black-border main-content-secondary mx-2"></div>
+      <!-- left side content -->
+      <div class="black-border main-content-secondary mx-2">
+        <div class="black-border">
+          <div>
+            <div class="d-flex mt-2">
+              <i class="bi bi-cup-hot mx-3"></i>
+              <div class="black-border w-100 mx-2">info...</div>
+            </div>
+            <div class="d-flex mt-2">
+              <i class="bi bi-heart mx-3"></i>
+              <div class="black-border w-100 mx-2">info...</div>
+            </div>
+            <div class="d-flex mt-2">
+              <i class="bi bi-dash mx-3"></i>
+              <div class="black-border w-100 mx-2">info...</div>
+            </div>
+            <div class="d-flex mt-2">
+              <div class="black-border w-100" style="margin-left: 3.5rem">
+                info...
+              </div>
+            </div>
+            <div class="d-flex mt-2">
+              <i class="bi bi-paperclip mx-3"></i>
+              <div class="black-border w-100 mx-2">info...</div>
+            </div>
+          </div>
+
+          <div class="d-flex mt-2">
+            <i class="bi bi-dash mx-3"></i>
+            <p>followed by 90 people</p>
+          </div>
+        </div>
+        <div class="black-border mt-2">
+          <div class="m-2">
+            <h5>Friends</h5>
+            <div class="d-flex justify-content-evenly">
+              <div class="image-box bg-secondary m-1"></div>
+              <div class="image-box bg-secondary m-1"></div>
+              <div class="image-box bg-secondary m-1"></div>
+            </div>
+
+            <div class="d-flex justify-content-evenly mt-1">
+              <div class="image-box bg-secondary m-1"></div>
+              <div class="image-box bg-secondary m-1"></div>
+              <div class="image-box bg-secondary m-1"></div>
+            </div>
+          </div>
+        </div>
+        <div class="black-border mt-2">
+          <div class="m-2">
+            <h5>Music</h5>
+            <div class="image-box bg-secondary m-1"></div>
+          </div>
+        </div>
+        <div class="black-border mt-2">
+          <div class="m-2">
+            <div class="d-flex">
+              <i class="bi bi-plus-lg"></i>
+              <h5 class="ms-2">Add books</h5>
+            </div>
+            <div class="image-box bg-secondary m-1"></div>
+          </div>
+        </div>
+      </div>
+      <!-- right side content -->
+      <div class="black-border main-content-secondary mx-2">
+        <div class="black-border">new post</div>
+        <div class="black-border">page1</div>
+        <div class="black-border">page2</div>
+        <div class="black-border">page3</div>
+      </div>
     </div>
   </body>
 </html>
