--- a/index.html
+++ b/index.html
@@ -132,10 +132,138 @@
       </div>
       <!-- right side content -->
       <div class="black-border main-content-secondary mx-2">
-        <div class="black-border">new post</div>
-        <div class="black-border">page1</div>
-        <div class="black-border">page2</div>
-        <div class="black-border">page3</div>
+        <div class="black-border">
+          <div class="d-flex align-items-center m-2">
+            <div class="d-flex mx-3">
+              <i class="bi bi-paperclip me-1"></i>
+              <p>Status</p>
+            </div>
+            <div class="d-flex mx-3">
+              <i class="bi bi-image me-1"></i>
+              <p>Photo</p>
+            </div>
+
+            <div>
+              <p>Place</p>
+            </div>
+
+            <div class="d-flex mx-3">
+              <i class="bi bi-gear-fill me-1"></i>
+              <p>Life Event+</p>
+            </div>
+          </div>
+
+          <div class="black-border m-2" style="height: 7rem"></div>
+          <div class="d-flex m-2">
+            <i class="bi bi-people-fill flex-grow-1"></i>
+            <div class="d-flex">
+              <div class="d-flex">
+                <i class="bi bi-globe-americas me-1"></i>
+                <p>Public</p>
+              </div>
+              <div class="mx-2">
+                <p class="bg-secondary text-light">Post</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <div class="d-flex mt-2">
+            <div class="d-flex w-100">
+              <div class="small-pfp bg-secondary m-2"></div>
+              <div class="d-flex flex-column">
+                <h5>Facebook Page</h5>
+                <div class="d-flex">
+                  <p>2 hours ago</p>
+                  <i class="bi bi-globe-americas ms-2"></i>
+                </div>
+              </div>
+              <p class="m-3 mt-2">shared a link</p>
+            </div>
+            <div class="d-flex m-2">
+              <i class="bi bi-gear-fill me-1"></i>
+              <i class="bi bi-pencil-fill me-1"></i>
+            </div>
+            <div class="black-border"></div>
+          </div>
+          <div class="black-border m-2" style="height: 7rem"></div>
+          <div class="d-flex">
+            <div class="d-flex mx-2 flex-grow-1">
+              <div class="mx-2">Like</div>
+              <div class="mx-2">Comment</div>
+              <div class="mx-2">Promote</div>
+              <div class="mx-2">Share</div>
+            </div>
+            <div class="mx-2">
+              <p class="bg-secondary text-light me-2">Post</p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="d-flex mt-2">
+            <div class="d-flex w-100">
+              <div class="small-pfp bg-secondary m-2"></div>
+              <div class="d-flex flex-column">
+                <h5>Facebook Page</h5>
+                <div class="d-flex">
+                  <p>2 hours ago</p>
+                  <i class="bi bi-globe-americas ms-2"></i>
+                </div>
+              </div>
+              <p class="m-3 mt-2">shared a link</p>
+            </div>
+            <div class="d-flex m-2">
+              <i class="bi bi-gear-fill me-1"></i>
+              <i class="bi bi-pencil-fill me-1"></i>
+            </div>
+            <div class="black-border"></div>
+          </div>
+          <div class="black-border m-2" style="height: 7rem"></div>
+          <div class="d-flex">
+            <div class="d-flex mx-2 flex-grow-1">
+              <div class="mx-2">Like</div>
+              <div class="mx-2">Comment</div>
+              <div class="mx-2">Promote</div>
+              <div class="mx-2">Share</div>
+            </div>
+            <div class="mx-2">
+              <p class="bg-secondary text-light me-2">Post</p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="d-flex mt-2">
+            <div class="d-flex w-100">
+              <div class="small-pfp bg-secondary m-2"></div>
+              <div class="d-flex flex-column">
+                <h5>Facebook Page</h5>
+                <div class="d-flex">
+                  <p>2 hours ago</p>
+                  <i class="bi bi-globe-americas ms-2"></i>
+                </div>
+              </div>
+              <p class="m-3 mt-2">shared a link</p>
+            </div>
+            <div class="d-flex m-2">
+              <i class="bi bi-gear-fill me-1"></i>
+              <i class="bi bi-pencil-fill me-1"></i>
+            </div>
+            <div class="black-border"></div>
+          </div>
+          <div class="black-border m-2" style="height: 7rem"></div>
+          <div class="d-flex">
+            <div class="d-flex mx-2 flex-grow-1">
+              <div class="mx-2">Like</div>
+              <div class="mx-2">Comment</div>
+              <div class="mx-2">Promote</div>
+              <div class="mx-2">Share</div>
+            </div>
+            <div class="mx-2">
+              <p class="bg-secondary text-light me-2">Post</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
