--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- main content section -->
     <div class="d-flex main-content mx-2">
       <!-- left side content -->
-      <div class="black-border main-content-secondary mx-2">
+      <div class="main-content-secondary mx-2">
         <div class="black-border">
           <div>
             <div class="d-flex mt-2">
@@ -83,7 +83,10 @@
               <div class="black-border w-100 mx-2">info...</div>
             </div>
             <div class="d-flex mt-2">
-              <div class="black-border w-100" style="margin-left: 3.5rem">
+              <div
+                class="black-border w-100"
+                style="margin-left: 3.5rem; margin-right: 0.5rem"
+              >
                 info...
               </div>
             </div>
@@ -131,7 +134,7 @@
         </div>
       </div>
       <!-- right side content -->
-      <div class="black-border main-content-secondary mx-2">
+      <div class="main-content-secondary mx-2">
         <div class="black-border">
           <div class="d-flex align-items-center m-2">
             <div class="d-flex mx-3">
@@ -168,7 +171,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="black-border my-2">
           <div class="d-flex mt-2">
             <div class="d-flex w-100">
               <div class="small-pfp bg-secondary m-2"></div>
@@ -185,7 +188,6 @@
               <i class="bi bi-gear-fill me-1"></i>
               <i class="bi bi-pencil-fill me-1"></i>
             </div>
-            <div class="black-border"></div>
           </div>
           <div class="black-border m-2" style="height: 7rem"></div>
           <div class="d-flex">
@@ -200,7 +202,8 @@
             </div>
           </div>
         </div>
-        <div>
+
+        <div class="black-border my-2">
           <div class="d-flex mt-2">
             <div class="d-flex w-100">
               <div class="small-pfp bg-secondary m-2"></div>
@@ -217,7 +220,6 @@
               <i class="bi bi-gear-fill me-1"></i>
               <i class="bi bi-pencil-fill me-1"></i>
             </div>
-            <div class="black-border"></div>
           </div>
           <div class="black-border m-2" style="height: 7rem"></div>
           <div class="d-flex">
@@ -232,7 +234,8 @@
             </div>
           </div>
         </div>
-        <div>
+
+        <div class="black-border my-2">
           <div class="d-flex mt-2">
             <div class="d-flex w-100">
               <div class="small-pfp bg-secondary m-2"></div>
@@ -249,7 +252,6 @@
               <i class="bi bi-gear-fill me-1"></i>
               <i class="bi bi-pencil-fill me-1"></i>
             </div>
-            <div class="black-border"></div>
           </div>
           <div class="black-border m-2" style="height: 7rem"></div>
           <div class="d-flex">
